--- a/style.css
+++ b/style.css
@@ -28,6 +28,71 @@ header{
     text-align: center;
     padding-top: 1rem;
 }
+.projetos-button {
+    position: relative;
+    display: block;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .button {
+    background-color:rgb(115, 23, 201);
+    color:aliceblue;
+    font-size: 12px;
+    padding: 10px 15px;
+    font-weight:bolder;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    cursor: pointer;
+    width:3cm ;
+    height: 1cm;
+    
+  }
+  
+  .dropdown-content {
+    display: none;
+    font-size: 13px;
+    position: absolute;
+    z-index: 1;
+    min-width: 200px;
+    background-color: #000000;
+    border: 2px solid rgb(115, 23, 201);
+    border-radius: 0px 15px 15px 15px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+ 
+  .dropdown-content a {
+    color: rgb(115, 23, 201);
+    padding: 8px 10px;
+    text-decoration: none;
+    display: block;
+    transition: 0.1s;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: rgb(115, 23, 201);
+    color: aliceblue;
+  }
+  
+  .dropdown-content a:focus {
+    background-color:rgb(115, 23, 201);
+    color:rgb(115, 23, 201)0;
+  }
+  
+  .dropdown-content #top:hover {
+    border-radius: 0px 13px 0px 0px;
+  }
+  
+  .dropdown-content #bottom:hover {
+    border-radius: 0px 0px 13px 13px;
+  }
+  
+  .projetos-button:hover button {
+    border-radius: 15px 15px 0px 0px;
+  }
+  
+  .projetos-button:hover .dropdown-content {
+    display: block;
+  }
 .cabeçalho-link{
     display: flex;
     gap: 3rem;
